--- a/editor/static/css/editor-all.css
+++ b/editor/static/css/editor-all.css
@@ -1,130 +1,76 @@
 body {
+    padding-top: 50px;
+    padding-bottom: 0;
     font-family: "Molengo","URW Gothic L",sans-serif;
     font-size: 1em;
     /* line-height: 1.4em; */
-    margin: 0;
     color: #F8F8F8;
-    background-color: #616263;
+    background-color: #666;
 }
 
-.rascalcontent {
-    /* width: 1280px; */ 
-    width: 1260px; 
-    margin-left: auto;
-    margin-right: auto;
-}
-
-a {
-    color:#A4211A;
-    text-decoration: none;
-}
-
-li {
-    list-style-type: none;
-}
-
-input {
-    margin-top: 5px;
-    margin-bottom: 5px;
-    width: 120px;
-}
-
-.night {
-    background-color: #0A001F;
-}
-
-.small {
-    font-size: 0.8em;
-}
-
-.medium {
-    font-size: 0.9em;
+p {
+    font-family: "Molengo","URW Gothic L",sans-serif;
+    font-size: 1em;
+    line-height: 1.4em;
 }
 
 /* topbar */
-#topbar {
-    height: 50px;
+.navbar-inner {
+  background-color: #424242;
+  background-image: -moz-linear-gradient(top, #4A4A4A, #3A3A3A);
+  background-image: -ms-linear-gradient(top, #4A4A4A, #3A3A3A);
+  background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#4A4A4A), to(#3A3A3A));
+  background-image: -webkit-linear-gradient(top, #4A4A4A, #3A3A3A);
+  background-image: -o-linear-gradient(top, #4A4A4A, #3A3A3A);
+  background-image: linear-gradient(top, #4A4A4A, #3A3A3A);
+  background-repeat: repeat-x;
+  -webkit-border-radius: 4px;
+     -moz-border-radius: 4px;
+          border-radius: 4px;
+  filter: progid:dximagetransform.microsoft.gradient(startColorstr='#4A4A4A', endColorstr='#3A3A3A', GradientType=0);
+  -webkit-box-shadow: 0 1px 3px rgba(0, 0, 0, 0.25), inset 0 -1px 0 rgba(0, 0, 0, 0.1);
+     -moz-box-shadow: 0 1px 3px rgba(0, 0, 0, 0.25), inset 0 -1px 0 rgba(0, 0, 0, 0.1);
+          box-shadow: 0 1px 3px rgba(0, 0, 0, 0.25), inset 0 -1px 0 rgba(0, 0, 0, 0.1);
+}
+
+.brand.rascal {
+    padding-top: 5px;
+    padding-bottom: 10px;
+}
+
+.nav-collapse.rascal {
+    /* float: right; */
     text-align: right;
-    line-height: 1.4em;
-    background-color: #414243;
+    padding-top: 5px;
 }
 
-#rascallogo {
-    clear: none;
-    float: left;
-    border: none;
-    margin-top: 5px;
-    margin-bottom: 5px;
-    margin-left: -3px;
-}
-
-#nav {
+.nav_rascal {
     margin: 0;
     font-family: "Molengo","URW Gothic L",sans-serif;
     font-size: 1em;
 }
 
-#nav li {
+.nav_rascal li {
     display: inline;
 }
 
-#nav a {
+.nav_rascal a {
     color: #E7E8E9;
 }
 
-/* Zurb awesome buttons */
-.awesome, .awesome:visited {
-    display: inline-block;
+.nav_rascal a.logout {
+    color: #C6433C;
+}
+
+/* General */
+.btn.rascal {
+    font-family: 'Lucida Grande';
     font-size: 16px;
-    padding: 8px 14px 9px;
-    color: #fff;
-    text-decoration: none;
-    -moz-border-radius: 5px;
-    -webkit-border-radius: 5px;
-    -moz-box-shadow: 0 1px 3px rgba(0,0,0,0.5);
-    -webkit-box-shadow: 0 1px 3px rgba(0,0,0,0.5);
-    text-shadow: 0 -1px 1px rgba(0,0,0,0.25);
-    border-bottom: 1px solid rgba(0,0,0,0.25);
-    border-style: none;
-    position: relative;
-    cursor: pointer;
 }
 
-.awesome:hover {
-    background-color: #111; color: #fff;
+.night { 
+    background-color: #0A001F;
 }
-
-.awesome:active {
-    top: 1px;
-}
-
-.small.awesome, .small.awesome:visited {
-    font-size: 11px;
-
-}
-.medium.awesome, .medium.awesome:visited {
-    font-size: 13px; font-weight: bold; line-height: 1; text-shadow: 0 -1px 1px rgba(0,0,0,0.25);
-}
-
-.large.awesome, .large.awesome:visited {
-    font-size: 16px; padding: 8px 14px 9px;
-}
-
-.blue.awesome, .blue.awesome:visited {
-    background-color: #51A8CB;
-}
-
-.blue.awesome:hover {
-    background-color: #475373;
-}
-.red.awesome, .red.awesome:visited {
-    background-color: #EF4A42;
-}
-
-.red.awesome:hover {
-    background-color: #872300;
-}
-/* end Zurb awesome buttons */
 
 @font-face {
   font-family: 'DroidSans';
