--- a/editor/templates/monitor.html
+++ b/editor/templates/monitor.html
@@ -1,30 +1,43 @@
-<html xmlns="http://www.w3.org/1999/xhtml">
+<!DOCTYPE html>
+<html lang="en">
 <head>
+    <meta charset="utf-8">
     <title>Monitor</title>
-    <!-- <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Droid+Sans|Molengo"> -->
-    <link rel="shortcut icon" href="/editor/static/images/favicon.ico">
-
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" href="static/images/favicon.ico">
+    
+    <link href="static/css/bootstrap-2.0.3.css" rel="stylesheet">
+    <!-- Le HTML5 shim, for IE6-8 support of HTML5 elements -->
+    <!--[if lt IE 9]>
+    <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->
+    <!-- <link href="../assets/css/bootstrap-responsive.css" rel="stylesheet"> -->
+    
     <link rel="stylesheet" type="text/css" href="/editor/static/css/editor-all.css">
     <link rel="stylesheet" type="text/css" href="/editor/static/css/editor-other.css">
 
     <script src="/editor/static/js/jquery-1.7.2.js"></script>
 </head>
 <body>
-    <div id="topbar">
-        <div class="rascalcontent">
-            <a href="/editor/"><img id="rascallogo" src="/editor/static/images/rm-logo-words-only-light.png"></a>
-            <ul id="nav">
-                <li><a href="/editor/">editor</a> | </li>
-                <li><a href="/editor/log">log</a> | </li>
-                <li><a href="/editor/config">config</a> | </li>
-                <li><a href="/editor/monitor">monitor</a></li>
-            </ul>
-            <div class=metanav>
-                <a href="/editor/logout">log out</a>
+    <div class="navbar navbar-fixed-top">
+        <div class="navbar-inner">
+            <div class="container-fluid">
+                <a class="brand rascal" href="/editor/"><img id="rascallogo" src="/editor/static/images/rm-logo-words-only-light.png" /></a>
+                <div class="nav-collapse rascal">
+                    <ul class="nav_rascal">
+                        <li><a href="/editor/">editor</a> | </li>
+                        <li><a href="/editor/log">log</a> | </li>
+                        <li><a href="/editor/config">config</a> | </li>
+                        <li><a href="/editor/monitor">monitor</a></li>
+                    </ul>
+                    <ul class="nav_rascal">
+                        <li><a href="/editor/logout" class="logout">log out</a></li>
+                    </ul>
+                </div>
             </div>
         </div>
     </div>
-    <div class="rascalcontent">
+    <div class="container-fluid">
         <div class="log-display">
             <table class="zebra">
                 <tr><td>{{ processes | safe }}</td></tr>
@@ -32,19 +45,11 @@
         </div>
     </div>
     
-    <script src="/editor/static/js/editor-resize.js"></script>
-    <script src="/editor/static/js/editor-other.js"></script>
     <script type="text/javascript">
-         $(document).ready(function(){
-            adjustGeometry();
-           $(".zebra tr").mouseover(function(){$(this).addClass("over");}).mouseout(function(){$(this).removeClass("over");});
-           $(".zebra tr:even").addClass("alt");
-            $(window).resize(function () {
-                resizeDelay(function () {
-                    adjustGeometry();
-                }, 500);
-            });
-         });
+        $(document).ready(function(){
+            $(".zebra tr").mouseover(function(){$(this).addClass("over");}).mouseout(function(){$(this).removeClass("over");});
+            $(".zebra tr:even").addClass("alt");
+        });
      </script>
 </body>
 </html>
