--- a/editor/templates/auth.html
+++ b/editor/templates/auth.html
@@ -1,28 +1,37 @@
-<html xmlns="http://www.w3.org/1999/xhtml">
+<!DOCTYPE html>
+<html lang="en">
 <head>
+    <meta charset="utf-8">
     <title>Log in</title>
-    <link rel="shortcut icon" href="/editor/static/images/favicon.ico">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" href="static/images/favicon.ico">
+    
+    <link href="static/css/bootstrap-2.0.3.css" rel="stylesheet">
+    <!-- Le HTML5 shim, for IE6-8 support of HTML5 elements -->
+    <!--[if lt IE 9]>
+    <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->
+    <!-- <link href="../assets/css/bootstrap-responsive.css" rel="stylesheet"> -->
 
     <link rel="stylesheet" type="text/css" href="/editor/static/css/editor-all.css">
     <link rel="stylesheet" type="text/css" href="/editor/static/css/editor-other.css">
 
-    <!-- <link rel="stylesheet" type="text/css" href="/editor/static/remove/style.css"> -->
-    <!-- <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Droid+Sans|Molengo"> -->
-
     <script src="/editor/static/js/jquery-1.7.2.js"></script>
 </head>
 <body>
-    <div id="topbar">
-        <div class="centered">
-            <a href="/edit"><img id="rascallogo" src="/editor/static/images/rm-logo-words-only-light.png"></a>
+    <div class="navbar navbar-fixed-top">
+        <div class="navbar-inner">
+            <div class="container-fluid">
+                <a class="brand rascal" href="/editor/"><img id="rascallogo" src="/editor/static/images/rm-logo-words-only-light.png" /></a>
+            </div>
         </div>
     </div>
-    <div class="narrow-content">
+    <div class="container-fluid">
         <div class="centered">
             <form action="" method=post>
                 <ul id="login-form">
                       <li>Password:</li>
-                      <li><input id="password-field" type=text name=password><input id="login" type="submit" value="Login" class="large red awesome" alt="Login"></li>
+                      <li><input id="password-field" type=text name=password><input id="login" type="submit" value="Login" class="btn btn-large btn-danger rascal" alt="Login"></li>
                       {% for message in get_flashed_messages() %}
                       <li><div class=flash>{{ message }}</div></li>
                       {% endfor %}
