--- a/editor/static/css/editor-other.css
+++ b/editor/static/css/editor-other.css
@@ -2,12 +2,49 @@ body {
     /* line-height: 1.4em; */
 }
 
+/* Login */
 .centered {
     width: 500px;
     margin-left: auto;
     margin-right: auto;
 }
 
+#login-form {
+    margin-top: 300px;
+    padding: 0; /* to reset -webkit-padding-start */
+}
+
+#login-form li {
+    list-style-type: none;
+}
+
+input {
+    margin-top: 5px;
+    margin-bottom: 5px;
+    width: 120px;
+}
+
+#password-field {
+    width: 300px;
+    height: 34px;
+    font-size: 2em;
+    margin-right: 10px;
+}
+
+#login {
+    width: 120px;
+}
+
+#message-panel {
+    float: right;
+    clear: none;
+    color: #EF4A42;
+    margin: 5px;
+    height: 40px;
+    width: 642px;
+}
+
+/* log and monitor */
 .zebra {
     font-size: 0.8em;
     line-height: 2em;
@@ -30,24 +67,8 @@ tr.over td {
     color: #00ff00;
 }
 
-#login-form {
-    margin-top: 300px;
-    padding: 0; /* to reset -webkit-padding-start */
-}
-
-#password-field {
-    width: 300px;
-    font-size: 2em;
-    margin-right: 10px;
-}
-
-#message-panel {
-    float: right;
-    clear: none;
-    color: #EF4A42;
-    margin: 5px;
-    height: 40px;
-    width: 642px;
+#mark {
+    width: 120px;
 }
 
 #reset {
