Make Revert button red, fix ps on monitor page

--- a/editor/templates/editor-cm.html
+++ b/editor/templates/editor-cm.html
@@ -163,7 +163,7 @@
         </div>
         <div class="modal-footer">
             <a id="revert-cancel" href="#" class="btn">Cancel</a>
-            <a id="revert-yes" href="#" class="btn btn-warning">Revert</a>
+            <a id="revert-yes" href="#" class="btn btn-danger">Revert</a>
         </div>
     </div>
 
