--- a/public/templates/album.html
+++ b/public/templates/album.html
@@ -7,7 +7,7 @@
     <title>Rascal Album</title>
     <link rel="stylesheet" type="text/css" href="/static/css/demo.css">
     <link rel="stylesheet" type="text/css" href="/static/css/album.css">
-    <link rel="shortcut icon" href="/static/favicon.ico">
+    <link rel="shortcut icon" href="/static/images/favicon.ico">
     <script src="/static/js/jquery-1.7.2.js"></script>
     <script src="/static/js/rascal-1.03.js"></script>
 </head>
